--- a/ansible/roles/nginx/templates/server.j2
+++ b/ansible/roles/nginx/templates/server.j2
@@ -2,6 +2,8 @@ server {
     server_name {{ item.domain }};
     root /var/www/gerald/web;
 
+    client_max_body_size 50M;
+
     location / {
         # try to serve file directly, fallback to app.php
         try_files $uri /app.php$is_args$args;
